/*
 * 작성자 : 김다슬
 * 작성일 : 2013.12.12
 * 기능명 : 3.3.1. 실명 인증용 휴대폰 인증 SMS 발송 Response
 */
package com.skplanet.storeplatform.sac.client.user.miscellaneous.vo;

option java_package = "com.skplanet.storeplatform.sac.client.user.miscellaneous.vo";

message AuthRealNameSmsSendResponse {
    /*
     * 본인인증 결과 코드
     * > 00000 : 인증성공
     * > 30000 : 한국모바일인증 연동 오류
     * > 30001 : 한국모바일인증 분실 또는 일시정지 휴대폰
     * > 30002 : 한국모바일인증 사업자(법인) 명의의 휴대폰
     * > 30003 : 한국모바일인증 휴대폰 번호 또는 통신사 불일치
     * > 30004 : 한국모바일인증 생년월일 또는 성별정보 불일치
     * > 30005 : 한국모바일인증 성명정보 불일치
     * > 30006 : 한국모바일인증 입력정보 불일치
     * > 30008 : 한국모바일인증 제한 요금제 가입자
     * > 30009 : 한국모바일인증 선불 휴대폰번호
     * > 39204 : 한국모바일인증 본인인증 사용권한 없음
     * > 39205 : 한국모바일인증 SMS인증 사용권한 없음
     */
    required string resultCode = 1;
    required string resultMessage = 2;     // 결과 메시지
    required string kmcSmsAuth = 3;        // 고유식별키
    required string checkParam1 = 4;        // 확인용 파라미터1
    required string checkParam2 = 5;        // 확인용 파라미터2
    required string checkParam3 = 6;        // 확인용 파라미터3
}